--- a/scripts/clustering-countries.Rmd
+++ b/scripts/clustering-countries.Rmd
@@ -41,7 +41,7 @@ In our analysis, we will use `country` as the row names. Since there is no label
 
 **Objective:** We want to categorize countries using socio-economic and health factors that determine the overall development of each country (from the [Kaggle description](https://www.kaggle.com/datasets/rohan0301/unsupervised-learning-on-country-data)).
 
-We load in the necessary packages and the [country data](https://www.kaggle.com/datasets/rohan0301/unsupervised-learning-on-country-data).
+We load in the necessary packages and the country data.
 
 ```{r, message=FALSE}
 # load packages
@@ -65,12 +65,11 @@ head(df)
 
 # Hierarchical clustering
 
-In hierarchical clustering, we use the Euclidean distance as our similarity measure between each observation (in this case, the countries in our data set). The Euclidean distance is the most common distance measure used when the variables are continuous. This value is a non negative measure that calculated the distance between two points. This distance is quantified based upon the Pythagoras Theorem. Here we also performed a scaling of our data in order to ensure that the scale of each variable is the same. This is done before we look at the optimal number of clusters. 
+In hierarchical clustering, we use the Euclidean distance as our similarity measure between each observation (in this case, the countries in our data set). The Euclidean distance is the most common distance measure used when the variables are continuous. This value is a non-negative measure that calculated the distance between two points. This distance is quantified based upon the Pythagorean Theorem. Here we also performed a scaling of our data in order to ensure that the scale of each variable is the same. This is done before we look at the optimal number of clusters.
 
-At the beginning of hierarchical clustering all objects start as an individual cluster and are joined with a linkage method. The linkages works by calculating either the differences or similarities among the objects. The two objects that are closest together are linked together and form a cluster. This linkage process is repeated, forming clusters until there is only one cluster left. There are many linkage methods one can use such as `Single Linkage`, `Complete Linkage`, `Centroid Linkage`, `Average Linkage`, and `Ward's Linkage` among others. One of the most common is Single Linkage, this method finds the two clusters with the closest minimum distance. Single linkage can result in extended, trailing
-clusters in which single observations are fused one-at-a-time.It will repeat until there is a single cluster left. The linkage method we used was Complete Linkage which is also another common method. This method finds the two clusters with the closest maximum distance and merges them together. In this case it records the largest of the dissimilarity values. Again this process is repeated until there is a single cluster left. 
+At the beginning of hierarchical clustering all objects start as an individual cluster and are joined with a linkage method. The linkages works by calculating either the differences or similarities among the objects. The two objects that are closest together are linked together and form a cluster. This linkage process is repeated, forming clusters until there is only one cluster left. There are many linkage methods one can use such as `Single Linkage`, `Complete Linkage`, `Centroid Linkage`, `Average Linkage`, and `Ward's Linkage` among others. One of the most common is Single Linkage, this method finds the two clusters with the closest minimum distance. Single linkage can result in extended, trailing clusters in which single observations are fused one-at-a-time. It will repeat until there is a single cluster left. The linkage method we used was Complete Linkage, which is also another common method. This method finds the two clusters with the closest maximum distance and merges them together. In this case it records the largest of the dissimilarity values. This process is repeated until there is a single cluster left. 
 
-Since we don't specify the number of clusters we want beforehand, like in K-means clustering, we produce a dendrogram which is an upside down tree like structure that represents the observations. In this diagram we are able to observe the clusterings for each possible number of clusters from 1 to n. A dendrogram is seen as an advantage over K-means clustering because we can see how each possible clusters affects the data as opposed to specifying the number of clusters at the beginning and having to tune. In practice one can select an appropriate number of clusters for the data by just analyzing the dendrogram and based on the heights of the fusion and the number of clusters desired.
+Since we don't specify the number of clusters we want beforehand, like in K-means clustering, we produce a dendrogram which is an upside down tree like structure that represents the observations. In this diagram we are able to observe the clusterings for each possible number of clusters from 1 to $n$. A dendrogram is seen as an advantage over K-means clustering because we can see how each possible clusters affects the data as opposed to specifying the number of clusters at the beginning and having to tune. In practice one can select an appropriate number of clusters for the data by just analyzing the dendrogram and based on the heights of the fusion and the number of clusters desired.
 
 ## Optimal number of clusters {.tabset}
 
