--- a/scripts/clustering-countries.Rmd
+++ b/scripts/clustering-countries.Rmd
@@ -541,7 +541,7 @@ In the green region, it includes a large part fo Asia (China, Thai, etc.), some 
 
 In the blue region, it mainly includes the United States, some countries in the middle east (Saudi Arabia, Libya etc.), and also one country in Africa (Nigeria). Here we find something interesting, intuitively we will regard blue region as a category of better socio-economic and health condition than all the categories we talked about above, since the blue region includes the U.S., Saudi Arabia, and some countries which have pretty high income and gdpp. However, although the average level of socio-economic and health condition in the blue region is really good, the model-based clustering still put some countries like Nigeria in this category. When we look into the details information of Nigeria, we find that it has extremely high child_mort, low income, low gdpp, and high total_fer, which should be the properties of the red or pink region. In this case, it is hard to interpret the properties of the blue region for some reasons. Finally, in the turquoise region, it includes a lot of countries in Europe (the U.K., France, Ireland, Norway, etc.), Canada, and Australia. Compared to all the region above, the countries in the turquoise region have the best socio-economic and health condition.
 
-In summary, Model-Based clustering has a good overall performance in categorizing the countries into more detailed levels, since each region in the model-based clustering is relatively interpretative, and we can see a clear trend of the level of socio-economic and health condition among those regions. This clustering results is more useful when we aim to categorize and compare the different countries with more detailed information. However, the trade-off is that it largely decreases the interpretability of the results. Since the model can never be perfect, it more possible to lead to some categorizing problems which makes the clusters difficult to interpret. Just like the examples we talked about above, intuitively it does not makes sense to put Nigeria into the blue region, so it is hard for us to summarize the common properties of the country in this cluster.
+In summary, Model-Based clustering has a good overall performance in categorizing the countries into more detailed levels, since each region in the model-based clustering is relatively interpretative, and we can see a clear trend of the level of socio-economic and health condition among those regions. This clustering results is more useful when we aim to categorize and compare the different countries with more detailed information. However, the trade-off is that it largely decreases the interpretability of the results. Since the model can never be perfect, it more possible to lead to some categorizing problems which makes the clusters difficult to interpret. Just like the examples we talked about above, intuitively it does not makes sense to put Nigeria into the blue region, so it is hard for us to summarize the common properties of the country in this cluster. Finally, comparing the Hierarchical clustering and Model-Based clustering together, we find that both methods perform well in different ways, and there are some trade-off between the number of clusters and the interpretability. The result of Hierarchical clustering is more easy to interpret but we could not apply this method to achieve the complex categorizing aim on this data set. On the contrary, the result of Model-Based Clustering is much harder to interpret, but we could get more information about different categories on this data set. Just as what we mentioned at the beginning, no criterion for "good" clustering, so we generally just want to choose the method that could balance the trade-off and achieve our research goal.
 
     ```{r, include=FALSE}
     # To put just code in our R script (runs every time this document is knit):
