--- a/scripts/clustering-countries.Rmd
+++ b/scripts/clustering-countries.Rmd
@@ -527,13 +527,19 @@ db_clust %>%
 
 # Results and Analysis
 
+## Hierarchical clustering
+
 Firstly, let us look at the map clusters of Hierarchical clustering. According to the results with 2 clusters, 3 clusters, and 4 clusters, we observe that there is no significant change when we add up the number of clusters each time. Since the number of clusters are given by the optimization methods above, it shows that 2, 3, or 4 clusters will give us the best clustering results, we will not continue adding up the number of clusters over 4. Therefore, we might decide that k=2 is the optimal number of clusters we want to analyze in Hierarchical clustering.
 
 Focusing on the map clusters k=2 of Hierarchical clustering, we could easily find that the result mainly splits the map into two regions: a large part of African and Middle East countries with some countries in South Asia (red region), and the rest of the world (blue region). Here are some examples of the countries in red region: Niger, Chad, South Africa, Nigeria, Iraq, Liberia, Afghan, etc., and some examples of the countries in blue region: Canada, the United States, Australia, India, and so on. According to the data set and the information searched online, we find that the countries in the red region has the same properties: very high child_mort, low income, low gdpp, very high total_fer, relatively low life-exp, and so on. Compared to those countries in red region,, we observe an obvious difference of those properties of the countries in blue region: generally speaking, countries in blue region have relatively better socio-economic and health conditions. It is worth mentioning that, we find that total_fer is an especially important indicator affecting the clustering results in this case. We could observe some countries in the blue region also have relatively weak socio-economic condition, like India (Income=4410, child_mort=58.8,gdpp=1350). However, those countries with weak socio-economic condition in the blue region always have relatively low total_fer, compared to pretty high average level of total_fer of the countries in red region.
 
 In this case, we could infer that the 2 clusters Hierarchical clustering performs well in dividing the countries into two types: Stage 1 country (red region), and Stage 2-5 country (blue region). The classification method here is known as Demographic Transition Model Stages, which is widely accepted in the social sciences because of the well-established historical correlation linking dropping fertility to social and economic development. The stage 1 country shows generally a pre-industrial society in which both birth and death rates are quite high. Birth rates and death rates are effectively in balance. The lack of food availability as well as adequate medical care or effective sanitation and hygiene means the population does not grow very much due to disease and starvation. Therefore, we conclude that Hierarchical clustering perform well in stably categorizing countries into two levels with pretty good interpretation.
 
+## Density-Based Clustering
+
 When we are looking at the map cluster results of the Density-Based Clustering, we could observe that there are only two clusters: one only contains is Nigeria, the other one includes all the rest of the countries. According to the detailed information of socio-economic and health of all the countries, it does not make sense to separate Nigeria individually, and it is also meaningless to categorize all the countries into one cluster. Therefore, Density-Based clustering method could not perform well on this data set.
+
+## Model-Based clustering
 
 Now, looking at the Model-Based clustering with the best model of k=6. We could easily observe that Model-Based clustering perform much better than Hierarchical clustering in categorizing countries into more levels when we are adding up the number of clusters, since several regions are distinctly divided on the map. The result mainly splits the map into six regions. In the red region, it includes the countries mainly in southern Africa (South Africa, Dem. Rep. of Congo, Zambia, etc.), South Asia (India, Pakistan,etc.), and middle East (Yemen, Iraq, etc.). The properties of those countries include pretty high child_mort, low income, low gdpp, high total_fer, relatively low life-exp, and so on. In the pink region, it includes the countries mainly in Middle and Western Africa (Niger, Chad, Liberia, etc.), and South Asia (Afghan, Nepal, etc.). The boundary between red region and pink region is not that clear but generally we could observe that the socio-economic and health condition of pink region is even worse than the red region. Beside, the average total_fer of the countries in pink region is even higher than red region.
 
@@ -541,10 +547,12 @@ In the green region, it includes a large part fo Asia (China, Thai, etc.), some 
 
 In the blue region, it mainly includes the United States, some countries in the middle east (Saudi Arabia, Libya etc.), and also one country in Africa (Nigeria). Here we find something interesting, intuitively we will regard blue region as a category of better socio-economic and health condition than all the categories we talked about above, since the blue region includes the U.S., Saudi Arabia, and some countries which have pretty high income and gdpp. However, although the average level of socio-economic and health condition in the blue region is really good, the model-based clustering still put some countries like Nigeria in this category. When we look into the details information of Nigeria, we find that it has extremely high child_mort, low income, low gdpp, and high total_fer, which should be the properties of the red or pink region. In this case, it is hard to interpret the properties of the blue region for some reasons. Finally, in the turquoise region, it includes a lot of countries in Europe (the U.K., France, Ireland, Norway, etc.), Canada, and Australia. Compared to all the region above, the countries in the turquoise region have the best socio-economic and health condition.
 
+## Comparison and Summary
+
 In summary, Model-Based clustering has a good overall performance in categorizing the countries into more detailed levels, since each region in the model-based clustering is relatively interpretative, and we can see a clear trend of the level of socio-economic and health condition among those regions. This clustering results is more useful when we aim to categorize and compare the different countries with more detailed information. However, the trade-off is that it largely decreases the interpretability of the results. Since the model can never be perfect, it more possible to lead to some categorizing problems which makes the clusters difficult to interpret. Just like the examples we talked about above, intuitively it does not makes sense to put Nigeria into the blue region, so it is hard for us to summarize the common properties of the country in this cluster. Finally, comparing the Hierarchical clustering and Model-Based clustering together, we find that both methods perform well in different ways, and there are some trade-off between the number of clusters and the interpretability. The result of Hierarchical clustering is more easy to interpret but we could not apply this method to achieve the complex categorizing aim on this data set. On the contrary, the result of Model-Based Clustering is much harder to interpret, but we could get more information about different categories on this data set. Just as what we mentioned at the beginning, no criterion for "good" clustering, so we generally just want to choose the method that could balance the trade-off and achieve our research goal.
 
-    ```{r, include=FALSE}
-    # To put just code in our R script (runs every time this document is knit):
-    knitr::purl(input = 'clustering-countries.Rmd', 
-                output = 'clustering-countries.R')
-    ```
+```{r, include=FALSE}
+# To put just code in our R script (runs every time this document is knit):
+knitr::purl(input = 'clustering-countries.Rmd', 
+            output = 'clustering-countries.R')
+```
