--- a/scripts/clustering-countries.Rmd
+++ b/scripts/clustering-countries.Rmd
@@ -1,12 +1,12 @@
 ---
 title: "Clustering Analysis on Country Data"
 output:
-  pdf_document:
-    toc: yes
   html_document:
     code_folding: hide
     toc: yes
     toc_float: yes
+  pdf_document:
+    toc: yes
 ---
 
 ```{=html}
@@ -252,8 +252,7 @@ setdiff(unique_countries_df, unique_countries_world)
 
 Use the tabs to choose between different numbers of clusters obtained from hierarchical clustering. Note that some countries are not included in this dataset (shaded in gray), such as Mexico and Greenland.
 
-From 2 clusters to 3 clusters there is a very small change that may not be noticeable at first glance. The method creates a separate cluster for the countries Malta, Luxembourg,and Singapore. Then when we go from 3 to 4 clusters the method makes Nigeria it's own cluster. 
-### $k = 2$ clusters
+From 2 clusters to 3 clusters there is a very small change that may not be noticeable at first glance. The method creates a separate cluster for the countries Malta, Luxembourg,and Singapore. Then when we go from 3 to 4 clusters the method makes Nigeria it's own cluster. \### $k = 2$ clusters
 
 ```{r, out.width='150%'}
 df %>%
@@ -462,7 +461,7 @@ abline(h=2.5, col="red")
 
 -   Approach 2: Under the most cases which we do not know the domain knowledge, we can also find the best value of MinPts by $ln(n)$, where n is the number of points that needed to be clustered. For our data set, the n should be 167 and the MinPts should be 5 or 6 with this approach.
 
-## Map clusters
+## Tuning parameters {.tabset}
 
 ### eps = 3, MinPts = 18
 
@@ -516,7 +515,9 @@ fviz_cluster(db, data = scale.df, stand = FALSE,
 
 *For this plot, as eps becomes smaller, more clusters exists. However, most of data points also be excluded from those clusters and become noise points.*
 
-After comparing the results of different combinations of eps and MinPts, we decided to use the one with eps = 3 and MinPts = 5 as our final parameter combination.\*
+## Final combination: eps = 3, MinPts = 5
+
+After comparing the results of different combinations of eps and MinPts, we decided to use the one with eps = 3 and MinPts = 5 as our final parameter combination.
 
 ## Check PCA
 
@@ -535,6 +536,8 @@ plot(pr.out$x[,1], pr.out$x[,2],
 After checking the PCA plot, it is easy to see that PCA plot also got a dense single group on the graph, which may be the reason why we only got one single cluster in DBSCAN.
 
 [<https://stackoverflow.com/questions/48051800/why-dbscan-clustering-returns-single-cluster-on-movie-lens-data-set>]
+
+## Map clusters
 
 ```{r, out.width='150%'}
 # add country names to clusters
